--- a/FRONT-END/Html/Cadastro/Cadastro.css
+++ b/FRONT-END/Html/Cadastro/Cadastro.css
@@ -21,7 +21,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 50px;
+    gap: 70px;
     flex-wrap: wrap;
 
 }
@@ -36,7 +36,8 @@ body{
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 12px;
+    justify-content: space-around;
+    gap: 8px;
 }
 .input_group{
     background-color: #7C7DDF;
@@ -77,4 +78,9 @@ option{
     font-weight: bold;
     font-size: 20px;
     margin-bottom: 10px;
+}
+.btn_senha{
+    position: relative;
+    padding: 5px;
+    left: 10px;
 }
