--- a/FRONT-END/Html/Cadastro/Cadastro.css
+++ b/FRONT-END/Html/Cadastro/Cadastro.css
@@ -21,8 +21,9 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 70px;
+    gap: 50px;
     flex-wrap: wrap;
+    flex: 1;
 
 }
 .label{
@@ -36,8 +37,7 @@ body{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    gap: 8px;
+    gap: 12px;
 }
 .input_group{
     background-color: #7C7DDF;
@@ -78,9 +78,4 @@ option{
     font-weight: bold;
     font-size: 20px;
     margin-bottom: 10px;
-}
-.btn_senha{
-    position: relative;
-    padding: 5px;
-    left: 10px;
 }
