--- a/FRONT-END/Html/Loja/Loja.css
+++ b/FRONT-END/Html/Loja/Loja.css
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-
 :root {
     --main-color: #7c7ddf;
     --black: #13131a;
     --bg: #010103;
-    --border: .1rem solid(225, 255, 255, 3);
+    --border: .1rem solid rgba(255, 255, 255, .3);
 }
 
 * {
@@ -40,15 +39,15 @@ body {
     background: var(--bg);
 }
 
-.info{
+.info {
     text-align: center;
     color: #fff;
     text-transform: uppercase;
-    padding-bottom:3.5rem;
+    padding-bottom: 3.5rem;
     font-size: 4rem;
 }
 
-.info span{
+.info span {
     color: var(--main-color);
     text-transform: uppercase;
 }
@@ -66,7 +65,6 @@ body {
 .btn:hover {
     letter-spacing: .2rem;
 }
-
 
 header {
     background: var(--bg);
@@ -98,7 +96,6 @@ header {
     padding-bottom: .5rem;
 }
 
-
 .header .icons div {
     color: #fff;
     cursor: pointer;
@@ -116,10 +113,10 @@ header {
 
 .header .search-form {
     position: absolute;
-    top: 155%;
-    right: 7%;
+    top: 24%;
+    right: 16%;
     background: #fff;
-    width: 50rem;
+    width: 30rem;
     height: 5rem;
     display: flex;
     align-items: center;
@@ -156,14 +153,15 @@ header {
 
 .header .cart-items-container {
     position: absolute;
-    top: 100%; right: -100%;
+    top: 100%;
+    right: -100%;
     height: calc(100vh - 9.5rem);
     width: 35rem;
     background: #fff;
     padding: 0 1.5rem;
 }
 
-.header .cart-items-container.active{
+.header .cart-items-container.active {
     right: 0;
 }
 
@@ -201,126 +199,233 @@ header {
 .header .cart-items-container .cart-item .price {
     font-size: 1rem;
     color: var(--main-color);
-
 }
 
-.header .cart-items-container .btn{
+.header .cart-items-container .btn {
     width: 100%;
     text-align: center;
 }
 
-
-
-.menu .box-container{
+.menu .box-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(30rem,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap: 1.5rem;
+    margin: 4rem;
 }
 
-.menu .box-container .box{
+.menu .box-container .box {
     padding: 5rem;
     text-align: center;
     border: var(--border);
 }
 
-.menu .box-container .box img{
+.menu .box-container .box img {
     height: 10rem;
 }
 
-.menu .box-container .box h3{
+.menu .box-container .box h3 {
     color: #fff;
     font-size: 2rem;
     padding: 1rem 0;
 }
 
-.menu .box-container .box .price{
+.menu .box-container .box .price {
     color: #fff;
     font-size: 2.5rem;
     padding: .5rem 0;
 }
 
-
-.menu .box-container .box .price span{
+.menu .box-container .box .price span {
     color: #fff;
     font-size: 1.5rem;
     text-decoration: line-through;
     font-weight: lighter;
-
 }
 
-
-.menu .box-container .box:hover{
-    background: #db0606;
+.menu .box-container .box:hover {
+    background: transparent;
+    padding: 3rem;
 }
 
-
-.menu .box-container .box:hover >*{
-   color: var(--black);
+.menu .box-container .box:hover>* {
+    color: var(--black);
 }
 
-.produtos .box-container{
+.slider {
+    width: 100%;
+    max-width: 100%;
+    height: 500px; /* Adjust height as needed */
+    margin: auto;
+    position: relative;
+    overflow: hidden;
+}
+
+.list {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    display: flex;
+    width: max-content;
+    transition: 1s;
+}
+
+.list img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.buttons {
+    position: absolute;
+    top: 45%;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 1%;
+}
+
+.buttons button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #7c7ddf;
+    color: #fff;
+    border: none;
+    font-family: monospace;
+    font-weight: bold;
+}
+
+.dots {
+    position: absolute;
+    bottom: 10px;
+    color: #fff;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dots li {
+    list-style: none;
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+    margin: 0 5px;
+    border-radius: 20px;
+    transition: 0.5s;
+}
+
+.dots li.ativo {
+    width: 30px;
+}
+
+.produtos .box-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(30rem,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap: 1.5rem;
+    margin: 4rem;
 }
 
-.produtos .box-container .box{
+.produtos .box-container .box {
     text-align: center;
     border: var(--border);
     padding: 2rem;
 }
 
-
-
-.produtos .box-container .box .icons a{
+.produtos .box-container .box .icons a {
     height: 5rem;
     width: 5rem;
     line-height: 5rem;
     font-size: 2rem;
     border: var(--border);
-    color: #fff;
+    color: #940000;
     margin: .3rem;
 }
 
-.produtos .box-container .box .icons a:hover{
+.produtos .box-container .box .icons a:hover {
     background: var(--main-color);
 }
 
-.produtos .box-container .box .imagens{
+.produtos .box-container .box .imagens {
     padding: 1.5rem 0;
 }
 
-.produtos .box-container .box .imagens img{
+.produtos .box-container .box .imagens img {
     height: 16rem;
 }
 
-.produtos .box-container .box .content h3{
-    color: #fff;
+.produtos .box-container .box .content h3 {
+    color: #ffffff;
     font-size: 2.5rem;
 }
 
-.produtos .box-container .box .content .stars{
-    color: #ffffff;
+.produtos .box-container .box .content .stars {
     padding: 1.5rem;
 }
 
-.produtos .box-container .box .content .stars i{
+.produtos .box-container .box .content .stars i {
     font-size: 1.7rem;
     color: var(--main-color);
 }
 
-.produtos .box-container .box .content .price{
+.produtos .box-container .box .content .price {
     color: #fff;
     font-size: 2.5rem;
 }
 
-.produtos .box-container .box .content .price span{
+.produtos .box-container .box .content .price span {
     text-decoration: line-through;
-    font-size: 1.5rem;
     font-weight: lighter;
+    font-size: 1.5rem;
 }
 
+.footer {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 0%, rgba(247, 255, 254, 1) 100%);
+    text-align: center;
+}
 
+.footer .icon-redes {
+    padding: 1rem 0;
+}
+
+.footer .icon-redes a {
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    color: #fff;
+    border: var(--border);
+    margin: .3rem;
+    border-radius: 50%;
+}
+
+.footer .icon-redes a:hover {
+    color: var(--main-color);
+}
+
+.footer .links-conctato {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+    gap: 1rem;
+}
+
+.footer .links-conctato a {
+    padding: .7rem 2rem;
+    color: #fff;
+    border: var(--border);
+    font-size: 2rem;
+}
+
+.footer .links-conctato a:hover {
+    background: var(--main-color);
+}
 
 
 
@@ -328,53 +433,43 @@ header {
 
 /* Responsivo */
 
-@media (max-width:991px){
+@media (max-width: 1005px) {
     html {
         font-size: 55%;
-        
-    }
-
-    .header{
-        padding: 1.5rem 2rem;
-
-    }
-
-    .home{
-        background-position: left;
-        justify-content: center;
-    }
-
-    .home .content h3{
-        font-size: 4.5rem;
-    }
-
-    .home .content p{
-        font-size: 1.5rem;
     }
 }
 
+@media (max-width: 961px) {
+    .header {
+        padding: 1.5rem 2rem;
+    }
 
-@media (max-width:761px){
-   
+    .home .content h3 {
+        font-size: 4.5rem;
+    }
+
+    .home .content p {
+        font-size: 1.5rem;
+    }
 
     #menu-btn {
         display: inline-block;
     }
 
-    .header .navbar{
+    .header .navbar {
         position: absolute;
-        top: 100%; right: -100%;
+        top: 100%;
+        right: -100%;
         background: #fff;
         width: 30rem;
         height: calc(100vh - 9.5rem);
     }
 
-    .header .navbar.active{
+    .header .navbar.active {
         right: 0;
     }
 
-   
-    .header .navbar a{
+    .header .navbar a {
         color: var(--black);
         display: block;
         margin: 1.5rem;
@@ -382,8 +477,12 @@ header {
         font-size: 2rem;
     }
 
-    .header .search-form{
+    .header .search-form {
         width: 90%;
         right: 2rem;
+    }
+
+    .slider {
+        height: 400px; /* Adjust height as needed */
     }
 }
