--- a/Projeto_PI_Novo/FRONT-END/Html/Carrinho/Carrinho.css
+++ b/Projeto_PI_Novo/FRONT-END/Html/Carrinho/Carrinho.css
@@ -34,7 +34,10 @@ html::-webkit-scrollbar-track {
     background-color: #fff;
     border-radius: 5rem;
 }
-
+.img{
+  width: 100px;
+  height: auto;
+}
 
 .headerTopo{
     background: var(--bg);
